--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
+
 plugins {
     id 'com.android.application'
-    id 'kotlin-android'
-    id 'kotlin-parcelize'
+    id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlin.plugin.serialization'
+
 }
 
 def apikeyPropertiesFile = rootProject.file("apikey.properties")
@@ -41,23 +42,32 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+
     }
 }
 
 dependencies {
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.7.10'
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation ("com.github.bumptech.glide:glide:4.14.1@aar") {
+        transitive = true
+    }
+    implementation 'com.codepath.libraries:asynchttpclient:2.2.0'
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0")
+    implementation 'com.google.code.gson:gson:2.8.7'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.codepath.libraries:asynchttpclient:2.2.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
-    implementation 'com.github.bumptech.glide:glide:4.13.2'
-    implementation 'com.google.code.gson:gson:2.9.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    testImplementation 'junit:junit:4.13.2'
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0")
+    implementation 'com.github.bumptech.glide:glide:4.2.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0")
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
