--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.2.1' apply false
-    id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.10'
+    id 'com.android.application' version '7.1.1' apply false
+    id 'com.android.library' version '7.1.1' apply false
+    id 'org.jetbrains.kotlin.jvm' version "1.4.10" apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+    id("org.jetbrains.kotlin.plugin.serialization") version "1.4.0"
+
+
 }
 
 task clean(type: Delete) {
